# Opacus

./: .env.test  .gitignore  .npmignore  EXAMPLES.md  LICENSE  PITCH-DECK.md  PUBLISH.md  README.md  REVENUE-MODEL.md  SECTOR-SOLUTION-MAPPING.md  TEST-RESULTS.md  docker-compose.yml  package-lock.json  package.json  presentation.html  start-gateway.sh  test-agent-messaging.js  test-client.js  test-complete.js  test-config.example.json  test-config.json  test-environment.js  test-exact-message.js  test-gateway-verify.js  test-signature.js  vercel.json
.github/workflows/: ci.yml  publish.yml
contracts/: .env.example  PROTOCOL-FEE.md  README.md  addresses.json  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: AgentRegistry.sol  DACRegistry.sol  DataStream.sol  MockERC20.sol  MsgEscrow.sol  OpacusCore.sol
contracts/scripts/: deploy.ts  test-integration.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
gateway/: .env.example  Dockerfile  README.md  ecosystem.config.js  package.json
gateway/src/: crypto.ts  index.ts  logger.ts  redis.ts  routes.ts  websocket.ts
opacus-rust/: Cargo.toml  README.md
opacus-rust/examples/: client.rs  relay.rs
opacus-rust/src/: client.rs  lib.rs  proto.rs  relay.rs  types.rs
opacus-rust/src/crypto/: keys.rs  mod.rs  security.rs
opacus-rust/src/transport/: mod.rs  quic.rs
opacus-sdk/: CHANGELOG.md  README.md  TEST-REPORT.md  package-lock.json  package.json  tsconfig.json
opacus-sdk/src/: client.ts  index.ts  types.ts
opacus-sdk/tests/: bridge.test.ts  chain.test.ts  crypto.test.ts  dac.test.ts  integration.test.ts  protocol.test.ts  smoke.test.ts
sdk-rust/: Cargo.toml  README.md
sdk-rust/src/: crypto.rs  error.rs  http.rs  lib.rs
sdk-ts/: README.md  package.json
sdk-ts/src/: H3DAC.ts  crypto.ts  http.ts  index.ts
website/: bridge-demo.html  create_logo.py  index-old.html  index.html  script.js  styles-old.css  styles.css  vercel.json
website/docs/: agent-registry.html  architecture.html  contracts-overview.html  dac-registry.html  deployment.html  docs-style.css  encryption.html  examples.html  getting-started.html  identity.html  index.html  installation.html  (+7 more)
(+36 files in other folders)
